# mgen

./: .gitignore  .gitignore~  LICENSE  Makefile  README.md  README.md~  _config.yml  build.py  build.sbt  buildimpl.py  buildutil.py  dodo.py  index.html  index.md  index.md~  index_a_functionality.md  index_a_functionality.md~  index_a_whatCanItHelpMeWith.md  index_b_Basic_model.md  index_b_Basic_model.md~  index_b_Basic_use.md  index_b_jekyllExample.md  index_c_Generating_code.md  index_c_using_gen_code.md  index_c_using_gen_code.md~  index_d_javascript.md  index_d_setting_up_projects.md  index_d_setting_up_projects.md~  index_e0_Downloads.md  index_e0_Downloads.md~  index_e1_Installation.md  index_e1_Installation.md~  index_e2_Dependencies.md  index_e2_Dependencies.md~  index_f_Language_support.md  index_f_Language_support.md~  index_g_Requirements.md  index_k_Video_tutorials.md  index_l0_Advanced_use.md  index_l1_JavaScript.md  (+6 more)
_includes/: footer.html  header.html  nav.html
_site/: index.html  jekyll-test.html
advanced_use_tabs/: cmd_line_arg_parsing.md  compiler_plug_ins.md  config_files.md  custom_generators.md  custom_idl_parsers.md  (+5 more)
mgen-cpplib/src/test/cpp/src/: CMakeLists.txt  MGenCpp_test.cpp  OsTime.cpp  OsTime.h  TestBase.h  mgen_unity_build.cpp
mgen-cpplib/src/test/cpp/src/testdata/: SpecialCharacters.txt  TestConfigDiff.txt
mgen-cpplib/src/test/cpp/src/tests/: ConfigFileTest.cpp  CppStreams.cpp  ExtremeValues.cpp  MemInputStream.cpp  ObjectManipulation.cpp  Performance.cpp  Serialization.cpp  TransientFields.cpp  UtfTests.cpp  WhitepaperExample.cpp
(+799 files in other folders)
